tests/paczka1/small_fuzzy/46238978.err
Error in line 12: fePFLxsJV A965 -5,8
Error in line 1: fePFLxsJV A965 83,0
